image gap fix test

--- a/index.css
+++ b/index.css
@@ -7,7 +7,6 @@
 }
 
 .image-container img {
-  margin: -1px;
   max-width: 100%;
   max-height: 100vh;
   border: 2px solid #444;
